@@ -3,7 +3,7 @@
 # Misc config variables;
 #
 
-BuildDate = 30.11.2006
+BuildDate = 20063019
 
 # DFtpDir = /var/www/virtual/
 
