@@ -365,6 +365,7 @@ FTP<br>traffic = FTP<br>Transfer
 FTPs total = FTP Konten gesamt
 General information = Allgemeine Informationen
 General settings = Allgemeine Einstellungen
+Get it at = Donwload von
 Go back = Zur&uuml;ck
 Green = Gr&uuml;n
 Group - Usermanagement = Benutzer/ Gruppen
